[egg_info]
tag_build = .dev2

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs =
    build
    .git
    *.egg
    tests/integration/pkglib/gcov_ext
    tests/integration/pkglib/gcov_ext_cython
    tests/integration/testing/pytest/parametrize_ids/tests
    tests/integration/testing/pytest/profile/tests


[test]
subprocess = 1

[build_sphinx]
doctest = 1
autodoc-external-methods = 0

[metadata]
name = pkglib
version = 0.9.0
author = Edward Easton
author_email = eeaston@gmail.com
description = Company-centric Python packaging and testing library
setup_requires =
	zc.buildout==1.5.2
	path.py>=2.2.2
install_requires =
	distribute==0.6.35
	pip==0.7.2
	zc.buildout==1.5.2
	termcolor==1.1.0
	importlib==1.0.2
	path.py>=2.2.2
	argparse==1.2.1
	networkx==1.6
    PasteScript==1.7.4
    pytest>=2.3

console_scripts =
	pyinstall=pkglib.scripts.pyinstall:main
	pyuninstall=pkglib.scripts.pyuninstall:main
	easy_uninstall=pkglib.scripts.pyuninstall:main
	pycheckout=pkglib.scripts.pycheckout:main
	pydepgraph=pkglib.scripts.pydepgraph:main
	svn-color=pkglib.scripts.svn_color:main
	plat=pkglib.scripts.plat:main
	pycleanup=pkglib.scripts.pycleanup:main
	runtests=pkglib.scripts.runtests:main
	tidy=pkglib.scripts.tidy:main
    pymkproject=pkglib.scripts.pymkproject:main

classifiers =
	Development Status :: 5 - Production/Stable
	Topic :: System :: Software Distribution
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Testing
	Framework :: Paste
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7

tests_require =
	pytest
	pytest-cov
	mock
	selenium
	python_jenkins
	redis
	pymongo

