[metadata]
name = pkglib-testing
version = 0.9.0
description =  Pkglib Testing library
author =  Edward Easton
author_email = eeaston@gmail.com
keywords =

classifiers =
	License :: OSI Approved :: MIT License
	Development Status :: 4 - Beta
    Topic :: Software Development :: Libraries
	Topic :: Software Development :: Testing
	Topic :: Database
    Framework :: Pyramid

install_requires =
    # TODO: split these up into optional deps
    pytest
    pytest-cov
    mock
    redis
    selenium
    pymongo
    SQLAlchemy
    path.py
    

setup_requires =
    # Setup dependencies, usually empty.

tests_require =

console_scripts =

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = 
	.git 
	*.egg 
	build 
	dist
	tests/integration/pytest_/parametrize_ids/tests
	tests/integration/pytest_/profile/tests
