[egg_info]
tag_build = .dev2

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
norecursedirs = 
	build
	.git
	*.egg
	tests/integration/gcov_ext
	tests/integration/gcov_ext_cython
	pkglib/project_template
addopts = -q --tb=native

[test]
subprocess = 1

[build_sphinx]
doctest = 1
autodoc-external-methods = 0

[metadata]
name = pkglib
version = 0.10.6
author = Edward Easton
author_email = eeaston@gmail.com
description = Company-centric Python packaging and testing library
setup_requires = 
	setuptools
	networkx>=1.6
	zc.buildout>=1.5.2, <1.6.0
	pkglib_util

install_requires = 
	setuptools
	pkglib_util
	pip>=0.7.2
	zc.buildout>=1.5.2, <1.6.0
	termcolor>=1.1.0
	importlib>=1.0.2
	argparse>=1.2.1
	networkx>=1.6
	PasteScript>=1.7.4
	pytest>=2.3
	
console_scripts = 
	pyinstall=pkglib.scripts.pyinstall:main
	pyuninstall=pkglib.scripts.pyuninstall:main
	easy_uninstall=pkglib.scripts.pyuninstall:main
	pycheckout=pkglib.scripts.pycheckout:main
	pydepgraph=pkglib.scripts.pydepgraph:main
	svn-color=pkglib.scripts.svn_color:main
	plat=pkglib.scripts.plat:main
	pycleanup=pkglib.scripts.pycleanup:main
	runtests=pkglib.scripts.runtests:main
	tidy=pkglib.scripts.tidy:main
	pymkproject=pkglib.scripts.pymkproject:main
classifiers = 
	Development Status :: 4 - Beta
	Topic :: System :: Software Distribution
	Topic :: Software Development :: Libraries
	Framework :: Paste
	Framework :: Setuptools Plugin
	Framework :: Buildout
	Intended Audience :: Developers
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
tests_require = 
    pkglib_testing
    contextlib2


[entry_points]
paste.paster_create_template = 
  pkglib_project = pkglib.project_template.paste_template:CorePackage